--- a/.github/workflows/daily-leads.yml
+++ b/.github/workflows/daily-leads.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/upload-artifact@v4
+
 
       - name: Set up Python
         uses: actions/setup-python@v4
