--- a/.github/workflows/daily-leads.yml
+++ b/.github/workflows/daily-leads.yml
@@ -8,9 +8,10 @@ on:
 jobs:
   run-script:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3  # ✅ this should be "checkout", not upload-artifact
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -26,8 +27,14 @@ jobs:
           YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
         run: python lead_gen.py
 
-      - name: Upload CSV Artifact
-        uses: actions/upload-artifact@v4  # ✅ this is where v4 goes
+      - name: Upload Daily CSV Artifact
+        uses: actions/upload-artifact@v4
         with:
           name: daily-vc-leads
           path: vc_leads_*.csv
+
+      - name: Upload Updated History
+        uses: actions/upload-artifact@v4
+        with:
+          name: vc-lead-history
+          path: history.csv
